_backup/deployment/istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.global-static-ip-name: insider-animeshon-com
    networking.gke.io/managed-certificates: insider-animeshon-com
  name: insider-animeshon-com
  namespace: istio-system
spec:
  rules:
  - host: insider.animeshon.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: istio-ingress
          servicePort: 80 # ! Figure out how to make it work with TLS on port 443.
